--- a/crm/accounts/templates/accounts/customer.html
+++ b/crm/accounts/templates/accounts/customer.html
@@ -8,8 +8,8 @@
       <a href="" class="btn btn-outline-info btn-sm btn-block"
         >Update Customer</a
       >
-      <a href="" class="btn btn-outline-danger btn-sm btn-block"
-        >Delete Customer</a
+      <a href="{% url 'create_order' context.customer_details.id %}" class="btn btn-outline-danger btn-sm btn-block"
+        >Place Order</a
       >
     </div>
   </div>
@@ -18,8 +18,8 @@
     <div class="card card-body">
       <h5>Contact Information</h5>
       <hr />
-      <p>Email:</p>
-      <p>Phone:</p>
+      <p>Email: {{context.customer_details.email}}</p>
+      <p>Phone: {{context.customer_details.phone}}</p>
     </div>
   </div>
 
@@ -27,7 +27,7 @@
     <div class="card card-body">
       <h5>Total Orders</h5>
       <hr />
-      <h1 style="text-align: center; padding:10px"></h1>
+      <h1 style="text-align: center; padding:10px">{{context.total_order.total_order}}</h1>
     </div>
   </div>
 </div>
@@ -37,6 +37,7 @@
     <div class="col-md">
         <div class="card card-body">
             <from method="get">
+                 
                 <button class="btn btn-primary" type="submit">Search</button>
             </from>
         </div>
@@ -57,6 +58,16 @@
                     <th>Update</th>
                     <th>Remove</th>
                 </tr>
+                {% for product_detail in context.product_details %}
+                  <tr>
+                    <td>{{product_detail.name}}</td>
+                    <td>{{product_detail.category}}</td>
+                    <td>{{product_detail.date_created | date:'Y-m-d H:i s'}}</td>
+                    <td>{{product_detail.status}}</td>
+                    <td><a class="btn btn-sm btn-info" href="{% url 'update_order' product_detail.id %}">Update</a></td>
+                    <td><a class="btn btn-sm btn-danger" href="{% url 'delete_order' product_detail.id %}">Remove</a></td>
+                  </tr>
+                {% endfor %}
             </table>
         </div>
     </div>
