--- a/crm/accounts/templates/accounts/dashboard.html
+++ b/crm/accounts/templates/accounts/dashboard.html
@@ -1,37 +1,51 @@
-{% extends "accounts/main.html" %}
-{% block content %}
-{% include "accounts/status.html" %}
-<br>
+{% extends "accounts/main.html" %} {% block content %} {% include "accounts/status.html" %}
+<br />
 <div class="row">
-    <div class="col-md-5">
-        <h5>Customer</h5>
-        <div class="card card-body">
-            <a href="" class="btn btn-primary btn-sm btn-block">Create Customer</a>
-            <table class="table table-sm">
-                <tr>
-                    <th></th>
-                    <th>Customer</th>
-                    <th>Orders</th>
-                </tr>
-            </table>
-        </div>
+  <div class="col-md-5">
+    <h5>Customer</h5>
+    <div class="card card-body">
+      <a href="" class="btn btn-primary btn-sm btn-block">Create Customer</a>
+      <table class="table table-sm">
+        <tr>
+          <th></th>
+          <th>Customer</th>
+          <th>Orders</th>
+        </tr>
+        
+        {% for customer_order_detail in customer_order_details %}
+        <tr>
+          <td></td>
+          <td><a  class="btn btn-sm btn-info" href="{% url 'customer' customer_order_detail.id %}">{{customer_order_detail.name}}</a></td>
+          <td>{{customer_order_detail.total_order}}</td>
+        </tr>
+        {% endfor %}
+      </table>
     </div>
+  </div>
 
-    <div class="col-md-7">
-        <h5>Last 5 orders</h5>
-        <div class="card card-body">
-            <a href="" class="btn btn-primary btn-sm btn-block">Create Order</a>
-            <table class="table table-sm">
-                <tr>
-                    <th>Products</th>
-                    <th>Date Ordered</th>
-                    <th>Status</th>
-                    <th>Update</th>
-                    <th>Remove</th>
-                </tr>
-            </table>
-        </div>
+  <div class="col-md-7">
+    <h5>Last 5 orders</h5>
+    <div class="card card-body">
+      <table class="table table-sm">
+        <tr>
+          <th>Products</th>
+          <th>Date Ordered</th>
+          <th>Status</th>
+          <th>Update</th>
+          <th>Remove</th>
+        </tr>
+        {% for last_5_order in last_5_orders %}
+        <tr>
+            <td>{{last_5_order.name}}</td>
+            <td>{{last_5_order.date_created | date:'Y-m-d H:i s'}}</td>
+            <td>{{last_5_order.status}}</td>
+            <td><a class="btn btn-sm btn-info" href="{% url 'update_order' last_5_order.id %}">Update</a></td>
+            <td><a class="btn btn-sm btn-danger" href="{% url 'delete_order' last_5_order.id %}">Remove</a></td>
+        </tr>
+        {% endfor %}
+        
+      </table>
     </div>
+  </div>
 </div>
-{% endblock  %}
-
+{% endblock %}
