--- a/crm/accounts/templates/accounts/products.html
+++ b/crm/accounts/templates/accounts/products.html
@@ -1,21 +1,26 @@
-{% extends "accounts/main.html" %}
-{% block content %}
-<br>
+{% extends "accounts/main.html" %} {% block content %}
+<br />
 <div class="row">
-    <div class="col-md">
-        <div class="card card-body">
-            <h5>Products</h5>
-        </div>
-        <div class="card card-body">
-            <table class="table table-sm">
-                <tr>
-                    <th>Product</th>
-                    <th>Category</th>
-                    <th>Price</th>
-                </tr>
-            </table>
-        </div>
+  <div class="col-md">
+    <div class="card card-body">
+      <h5>Products</h5>
     </div>
+    <div class="card card-body">
+      <table class="table table-sm">
+        <tr>
+          <th>Product</th>
+          <th>Category</th>
+          <th>Price</th>
+        </tr>
+        {% for product in products %} 
+            <tr>
+                <td>{{product.name}}</td>
+                <td>{{product.category}}</td>
+                <td>{{product.price}}</td>
+            </tr>
+        {% endfor %}
+      </table>
+    </div>
+  </div>
 </div>
-{% endblock  %}
-
+{% endblock %}
