--- a/crm/accounts/templates/accounts/status.html
+++ b/crm/accounts/templates/accounts/status.html
@@ -1,4 +1,5 @@
 <br>
+
 <div class="row">
     <div class="col">
         <div class="col-md">
@@ -10,7 +11,7 @@
                 </div>
                 <div class="card-body">
                     <h3 class="card-title">
-                        Test1
+                       {{total_order}}
                     </h3>
                 </div>
             </div>
@@ -27,7 +28,7 @@
                 </div>
                 <div class="card-body">
                     <h3 class="card-title">
-                        Test2
+                        {{total_order_delivered}}
                     </h3>
                 </div>
             </div>
@@ -44,7 +45,7 @@
                 </div>
                 <div class="card-body">
                     <h3 class="card-title">
-                        Test3
+                        {{total_order_pending}}
                     </h3>
                 </div>
             </div>
