--- a/crm/accounts/templates/accounts/login.html
+++ b/crm/accounts/templates/accounts/login.html
@@ -81,6 +81,15 @@
                         <form action="" method="POST">
                             {% csrf_token %}
                             <div class="form-group row">
+                                {% if messages %}
+                                    <ul class="messages">
+                                        {% for message in messages %}
+                                        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                                        {% endfor %}
+                                    </ul>
+                                {% endif %}
+                            </div>
+                            <div class="form-group row">
                                 <label for="username" class="col-md-4 col-form-label text-md-right">Username</label>
                                 <div class="col-md-6">
                                     <input type="text" id="username" class="form-control" name="username" required autofocus>
@@ -95,7 +104,7 @@
                             </div>
                             <div class="col-md-6 offset-md-4">
                                 <button type="submit" class="btn btn-primary">
-                                    Sign Up
+                                    Sign In
                                 </button>
                                 Don't Have an account?<a href="{% url 'registration' %}" class="ml-2">Sign Up</a>
                             </div>
