--- a/crm/accounts/templates/accounts/register.html
+++ b/crm/accounts/templates/accounts/register.html
@@ -122,7 +122,7 @@
 
                             <div class="col-md-6 offset-md-4">
                                 <button type="submit" class="btn btn-primary">
-                                    Register
+                                    Sign Up
                                 </button>
                                 Have an account?<a href="{% url 'login' %}" class="ml-2">Sign in</a>
                             </div>
